--- a/views/game.erb
+++ b/views/game.erb
@@ -1,51 +1,64 @@
-<% require 'pry' %>
 
-<h1>Blackjack</h1>
-
-<p>Welcome <%= session[:player_name] %></p>
-
-<p>
-  <% if @play_again %>
-    <h5>Play again?</h5>
-    <a href="/game" class='btn btn-primary'>Yes</a>
-    <a href="/game_over" class='btn'>No</a>
-    
+<div id="game">
+  <%if @loser %>
+    <div class="alert alert-error"><%=@loser%></div>
   <% end %>
-</p>
+  <%if @winner %>
+    <div class="alert alert-success"><%=@winner%></div>
+  <% end %>
+
+  <h1>Blackjack</h1>
+
+  <p>Welcome <%= session[:player_name] %></p>
+
+  <p>
+    <% if @play_again %>
+      <h5>Play again?</h5>
+      <% if session[:money] == 0 %>
+        <a href="/game_over" class='btn btn-primary'>Yes</a>
+      <% else %>
+        <a href="/bet" class='btn btn-primary'>Yes</a>
+      <% end %>
+      <a href="/game_over" class='btn'>No</a>
+    <% end %>
+  </p>
 
 
-<div class="well">
-  <h4>Dealer's hand:</h4>
-  <% session[:dealer_hand].each_with_index do |card, i| %>
-    <% if session[:turn] != "dealer" and i == 0 %>
-      <img src="/images/cards/cover.jpg">
-    <% else %>
+  <div class="well">
+    <h4>Dealer's hand:</h4>
+    <% session[:dealer_hand].each_with_index do |card, i| %>
+      <% if session[:turn] != "dealer" and i == 0 %>
+        <img src="/images/cards/cover.jpg">
+      <% else %>
+        <%= draw_card(card) %>
+      <% end %>
+    <% end %>
+
+    <% if @show_dealer_hit_button %>
+      <p>
+        <h5>Dealer's total hand is: <%= calc_hand(session[:dealer_hand]) %> and will hit.</h5>
+        <form id="dealer_hit" action='/game/dealer/hit' method='post'>
+          <input type='submit' class='btn btn-primary' value='Click to see dealer card &rarr;'>
+        </form>
+      </p>
+    <% end %>
+  </div>
+
+  <div class="well">
+    <h4><%= session[:player_name] %>'s hand:</h4>
+    <% session[:player_hand].each do |card| %>
       <%= draw_card(card) %>
     <% end %>
-  <% end %>
-  <% if @show_dealer_hit_button %>
-    <p>
-      <h5>Dealer's total hand is: <%= calc_hand(session[:dealer_hand]) %> and will hit.</h5>
-      <form action='/game/dealer/hit' method='post'>
-        <input type='submit' class='btn btn-primary' value='Click to see dealer card &rarr;'>
-      </form>
-    </p>
+  </div>
+  <h5><%= session[:player_name] %>'s total hand is: <%= calc_hand(session[:player_hand]) %>.</h5>
+
+  <% if @show_hit_or_stay_button %>
+    <p><%= session[:player_name]%> has <strong>$<%= session[:money]%></strong> total. Betting amount: <strong>$<%= session[:bet_amount]%></strong>.</p>
+    <form id="hit_form" action="/game/player/hit" method="post">
+      <input class="btn btn-success" type="submit" value="Hit">
+    </form>
+    <form id="stay_form" action="/game/player/stay" method="post">
+      <input class="btn btn-warning" type="submit" value="Stay">
+    </form>
   <% end %>
 </div>
-
-<div class="well">
-  <h4><%= session[:player_name] %>'s hand:</h4>
-  <% session[:player_hand].each do |card| %>
-    <%= draw_card(card) %>
-  <% end %>
-</div>
-<h5><%= session[:player_name] %>'s total hand is: <%= calc_hand(session[:player_hand]) %></h5>
-
-<% if @show_hit_or_stay_button %>
-  <form id="hit_form" action="/game/player/hit" method="post">
-    <input class="btn btn-success" type="submit" value="Hit">
-  </form>
-  <form id="stay_form" action="/game/player/stay" method="post">
-    <input class="btn btn-warning" type="submit" value="Stay">
-  </form>
-<% end %>
