--- a/views/game_over.erb
+++ b/views/game_over.erb
@@ -1,3 +1,3 @@
 <h4>Looks like you're done</h4>
-<p>Maybe it's time to go to Vegas?</p>
+<p>Maybe you should give it a shot in Vegas?</p>
 <a href="/new_game">Start over</a>
